0.3
---

- Add pyramid_retry
  See: https://github.com/Pylons/pyramid/issues/3042


0.2
---

- Add plaster_pastedeploy to the dependencies in setup.py
  See: https://github.com/Pylons/pyramid/issues/3048


0.1
---

- Initial version.