@@ -22,6 +22,9 @@ retry.attempts = 3
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
 
+[pshell]
+setup = {{ cookiecutter.repo_name }}.pshell.setup
+
 ###
 # wsgi server configuration
 ###
