@@ -16,6 +16,9 @@ zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
 
 retry.attempts = 3
 
+[pshell]
+setup = {{ cookiecutter.repo_name }}.pshell.setup
+
 ###
 # wsgi server configuration
 ###
