@@ -1,15 +1,22 @@
+unreleased
+----------
+
+- Add pshell helpers for starting transactions and injecting builtins into
+  the interactive console.
+  See https://github.com/Pylons/pyramid-cookiecutter-zodb/pull/35/files
+
 0.3
 ---
 
 - Add pyramid_retry
-  See: https://github.com/Pylons/pyramid/issues/3042
+  See https://github.com/Pylons/pyramid/issues/3042
 
 
 0.2
 ---
 
 - Add plaster_pastedeploy to the dependencies in setup.py
-  See: https://github.com/Pylons/pyramid/issues/3048
+  See https://github.com/Pylons/pyramid/issues/3048
 
 
 0.1
